--- a/README
+++ b/README
@@ -1,3 +1,19 @@
-Shell-script
+# Shell-script
 
-This script will automatically install many packages :)
+[![Build status](https://i.imgur.com/bZag5zT.png)]()
+[![Bash version](https://i.imgur.com/ZsjtDis.png)]()
+
+## Test coverage
+
+- [![Apt coverage](https://i.imgur.com/ot9wyia.png)]() Fully tested
+- [![Pacmen coverage](https://i.imgur.com/gARxAwm.png)]() Not fully tested
+- [![Dnf coverage](https://i.imgur.com/aVW20oD.png)]() Not yet tested
+- [![Zypper coverage](https://i.imgur.com/XXPMa8O.png)]() Not yet tested
+- [![Yum coverage](https://i.imgur.com/88zgjCM.png)]() Not finished
+
+## Discription
+
+This script will automatically install many packages for
+- Informatica year 1 & 2
+- Artificial Intelligence year 1
+- Artificial Intelligence year 2
